--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <title>Departamentos Stefi - Admin</title>
     <base href="./" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="./assets/media/logo.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../../departamentos-stefi-admin/src/assets/media/logo.ico"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
